Harden auth endpoints